# kano-cpp-infra

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pixi-global-tool.toml  pixi.toml
PRIVATE/build_info/: build_info_impl.cpp
PRIVATE/platform/: platform_impl.cpp
PRIVATE/process/: process_impl.cpp
PRIVATE/self/: self_impl.cpp
PUBLIC/build_info/: kano_build_info.h
PUBLIC/config/: kano_config.h
PUBLIC/diagnostics/: kano_diagnostics.h
PUBLIC/platform/: kano_platform.h
PUBLIC/process/: kano_process.h
PUBLIC/self/: kano_self.h
cmake/: KanoInfraConfig.cmake.in
code/apps/kano_infra_tool/: CMakeLists.txt  main.cpp
code/systems/kano_infra_build_info/: CMakeLists.txt
code/systems/kano_infra_build_info/private/: build_info_impl.c  build_info_impl.cpp
code/systems/kano_infra_build_info/public/: kano_build_info.hpp
code/systems/kano_infra_config/: CMakeLists.txt
code/systems/kano_infra_config/private/: config_loader.c  config_loader.cpp
code/systems/kano_infra_config/public/: kano_config.h  kano_config_export.h
code/systems/kano_infra_diagnostics/: CMakeLists.txt
code/systems/kano_infra_diagnostics/private/: diagnostics_impl.cpp
code/systems/kano_infra_platform/: CMakeLists.txt
code/systems/kano_infra_platform/private/: platform_impl.cpp
code/systems/kano_infra_platform/public/: kano_platform.h
code/systems/kano_infra_process/: CMakeLists.txt
code/systems/kano_infra_process/private/: process_impl.cpp
code/systems/kano_infra_process/public/: kano_process.h
code/systems/kano_infra_self/: CMakeLists.txt
code/systems/kano_infra_self/private/: self_impl.c
code/systems/kano_infra_timing/: CMakeLists.txt
code/systems/kano_infra_timing/private/: timing_impl.cpp
code/systems/kano_infra_timing/public/: kano_timing.h
config/: bdd-feature-manifest.kano-agent-backlog-skill.json  matrix.yml  suite-map.kano-git-master.json
scripts/: README.md  setup-global-tools.sh  win64-activate.bat
scripts/backlog/: windows_preset_build.sh  windows_preset_helper.ps1
scripts/backlog/windows/: msbuild-generate-sln.sh  ninja-msvc-coverage-build.sh  ninja-msvc-debug.sh  ninja-msvc-release.sh
scripts/cmake/: KanoInfraConfig.cmake
scripts/common/: build_metadata.sh  macos_remote_build.sh  package-reports-with-skill.sh  pgo_workflow.sh  report_skill_adapter.sh  test_report.sh  unix_preset_build.sh  windows_preset_build.sh  windows_preset_helper.ps1
scripts/lib/: build_metadata.sh  common-remote.sh  coverage_report.sh  coverage_workflow.sh  docker_host.sh  docker_linux_build.sh  linux_ci_runner.sh  llvm_json_to_cobertura.py  macos_remote_build.sh  matrix.sh  measure_iteration_baseline.sh  native_tool.sh  package-reports-with-skill.sh  pgo_workflow.sh  pixi_bootstrap.sh  python_resolver.sh  render_junit_test_report.py  report_skill_adapter.sh  test_report.sh  unix_preset_build.sh  windows_preset_build.sh  windows_preset_helper.ps1
scripts/linux/: docker-build.sh  native-build.sh
scripts/mac/: native-build.sh
scripts/macos/: native-build.sh
scripts/orchestration/: matrix.sh
scripts/platform/linux/: ci-build.sh  ci-coverage-all.sh  ci-export.sh  ci-pgi-build.sh  ci-pgo-build.sh  ci-pgo-test.sh  ci-profile-gather.sh  ci-quick-test.sh  ci-test-report.sh  ci-validate.sh  docker-build.sh  native-build.sh  prerequisite.sh
scripts/platform/mac/: native-build.sh  remote-build.sh
scripts/platform/win64/: msbuild-generate-sln.sh  ninja-msvc-coverage-build.sh  ninja-msvc-debug.sh  ninja-msvc-release.sh  prerequisite.ps1  windows_preset_build.sh
scripts/profiling/: common.sh  profile_run_capabilities.py  report.sh  run.sh  run_matrix.py
scripts/profiling/tests/: test_profile_run_capabilities.py
scripts/self/: build-debug.sh  build.sh  rebuild.sh
scripts/stages/: coverage-build.sh  coverage-gather.sh  coverage-report.sh  ensure-coverage-tools.sh  pgo-gather.sh  prerequisite-linux.sh  prerequisite-macos.sh  prerequisite-windows.sh  profile-run-manifest.sh  test-lane.sh  test-report.sh  test.sh
scripts/tools/: generate-bdd-metadata-from-junit.py
scripts/win64/: windows_preset_build.sh
scripts/windows/: msbuild-generate-sln.sh  ninja-msvc-coverage-build.sh  ninja-msvc-debug.sh  ninja-msvc-release.sh  windows_preset_helper.ps1
scripts/workflows/: coverage-all.sh  pgo-gather-with-coverage.sh  pgo-rebuild.sh
